--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 
 			<div class="project-content">
 				<div class="project-image">
-					<a href=""><img src="images/project1.jpg"></a>
+					<a href="https://codepen.io/AbdulBasith/full/KJmXRG"><img src="images/project1.jpg"></a>
 						
 				</div>
 				<div class="project-p left">
 					<h3>Product landing page</h3>
 					<p>Fully responsive, one page product landing page. The contrasting colors make it look really beautiful. </p>
-					<a href="www.google.com"><button class="button project-button">Take me there</button></a>
+					<a href="https://codepen.io/AbdulBasith/full/KJmXRG"><button class="button project-button">Take me there</button></a>
 				</div>
 			</div>
 
