--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			</div>
 		</nav>
 			<div class="intro-content"><div class="intro-head"><span class="html">&lt;header&gt;</span><span class="hi">Hi,</span> I'm <span class="name ac1-c">Basith.</span><br>I am a full stack web developer. <span class="html">&lt;/header&gt;</span></div>
-			<a href="#features"><button class="button intro-button">Learn More</button></a>
+			<a href="#features"><button class="button intro-button">Scroll down to learn more</button></a>
 			</div>
 
 			<div class="arrow-down"><a href="#info-div"><span class="fas fa-angle-double-down"></span></a></div>
