--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Basith: Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="styles/styles.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+	<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
 	
@@ -11,6 +13,7 @@
 
 	<div class="intro">
 		<nav>
+			<div class="logo"><img src="images/logo.png"></div>
 			<div class="nav-links">
 			<a class="nav-link" href="#features">Features</a>
 			<a class="nav-link" href="#projects">Projects</a>
