--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<div class="intro">
 		<nav>
-			<div class="logo"><img src="images/logo.png"></div>
+			<div class="logo"><img src="logo.png"></div>
 			<div class="nav-links">
 			<a class="nav-link" href="#features">Features</a>
 			<a class="nav-link" href="#projects">Projects</a>
