--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<div class="project-content">
 				<div class="project-p right">
 					<h3>Technical Documentation Page</h3>
-					<p>Fully responsive, one page product landing page. The contrasting colors make it look really beautiful. </p>
+					<p>A flexbox technical documentation page built for Freecodecamp's projects. It is responsive, simple and has a sticky side navbar.</p>
 					<a href="https://codepen.io/AbdulBasith/full/VgjQvx"><button class="button project-button">Take me there</button></a>
 				</div>
 				<div class="project-image">
@@ -107,12 +107,7 @@
 				</div>
 				<div class="project-p left">
 					<h3>Survey form</h3>
-					<p>Fully responsive, one page product landing page. The contrasting colors make it look really beautiful. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-					proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+					<p>A Google Form like survey form. Simple and easy to use, and is responsive. It has mandatory field checks and submit action.</p>
 					<a href="https://codepen.io/AbdulBasith/full/daGQqN"><button class="button project-button">Take me there</button></a>
 				</div>
 			</div>
@@ -120,7 +115,7 @@
 			<div class="project-content">
 				<div class="project-p right">
 					<h3>Fully Functional E-Commerce Bookstore</h3>
-					<p>Fully responsive, one page product landing page. The contrasting colors make it look really beautiful. </p>
+					<p>A full stack e-commerce booksite using HTML, CSS, Bootstrap, PHP, SQL, and a payment gateway. It is fully responive, has both front-end and server side scripts.</p>
 					<a href="https://github.com/BasithAbdul/sample-ecommerce-site"><button class="button project-button">Take me there</button></a>
 				</div>
 				<div class="project-image">
@@ -135,7 +130,7 @@
 				</div>
 				<div class="project-p right">
 					<h3>Tribute Page</h3>
-					<p>Fully responsive, one page product landing page. The contrasting colors make it look really beautiful. </p>
+					<p>My first webpage. It is a tribute to Elon Musk. </p>
 					<a href="https://codepen.io/AbdulBasith/full/VpdXer"><button class="button project-button">Take me there</button></a>
 				</div>
 				
